--- a/html/src/scss/style.scss
+++ b/html/src/scss/style.scss
@@ -2,12 +2,10 @@
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
 # Config
-# Grid
 # Helpers
 # Base
 # Layout
 # Plugins
-# Print Styles
 # Components
 --------------------------------------------------------------*/
 
@@ -16,14 +14,7 @@
 --------------------------------------------------------------*/
 @import 'config/reset';
 @import 'config/variables';
-
-/*--------------------------------------------------------------
-# Grid
---------------------------------------------------------------*/
-@import 'base/breakpoints';
-@import 'base/grid-framework';
-@import 'base/grid';
-@import 'base/grid-layout';
+@import 'config/breakpoints';
 
 /*--------------------------------------------------------------
 # Helpers
@@ -49,11 +40,6 @@
 # Plugins
 --------------------------------------------------------------*/
 @import 'plugins/slick';
-
-/*--------------------------------------------------------------
-# Print Styles
---------------------------------------------------------------*/
-@import 'helpers/print';
 
 /*--------------------------------------------------------------
 # Components
