--- a/html/src/scss/modules/_footer.scss
+++ b/html/src/scss/modules/_footer.scss
@@ -1,6 +1,7 @@
 //----------  footer
 //------------------------------------------------------------------------------
 .footer {
+	background-image: url('../assets/images/shapes/footer-shape.svg');
 	padding: 30px 0;
 	color: $white;
 }
