added typography styles

--- a/html/src/scss/base/_layout.scss
+++ b/html/src/scss/base/_layout.scss
@@ -3,9 +3,10 @@
 
 body {
 	font-family: $font-default;
-	font-size: 14px;
-	font-weight: 400;
-	color: $black;
+	font-size: 18px;
+	font-weight: 300;
+	color: $grey;
+	line-height: 30px;
 }
 
 .scroll-disabled {
