--- a/html/src/html/shared/footer/footer.hbs
+++ b/html/src/html/shared/footer/footer.hbs
@@ -1,5 +1,5 @@
 <footer class="footer has-cover">
-	<div class="wrap wrap--medium">
+	<div class="wrap wrap--normal">
 		<div class="footer__container">
 			<div class="footer__logo">
 				<img class="footer__logo-image" src="assets/images/footer-logo.svg" alt="logo">
