working on header

--- a/html/src/html/shared/header/header.hbs
+++ b/html/src/html/shared/header/header.hbs
@@ -1,20 +1,29 @@
 <header class="header">
 	<div class="wrap">
 		<div class="header__container">
-			<a href="/" class="header__home">
-				<img src="{{logo}}" alt="" class="header__logo"/>
+			<a href="/" class="header__logo">
+				<img src="{{logo}}" alt="">
 			</a>
-			{{#if menu}}
-				<nav class="nav">
-					<ul class="nav__list" role="menubar">
-					{{#each menu}}
-						<li class="nav__item" role="menuitem">
-							<a href="javascript:;" class="nav__link">{{this}}</a>
-						</li>
-					{{/each}}
-					</ul>
-				</nav>
-			{{/if}}
+			<div class="navigation">
+				{{#if menu}}
+					<nav class="nav">
+						<ul class="nav__list" role="menubar">
+							{{#each menu}}
+								<li class="nav__item" role="menuitem">
+									<a class="nav__link{{#if @first}} nav__link--active{{/if}}" href="javascript:;">{{this}}</a>
+								</li>
+							{{/each}}
+						</ul>
+					</nav>
+				{{/if}}
+				<a class="btn btn--mint header__join-btn" href="javascript:;">{{joinUs}}</a>
+				<button class="nav-toggle" type="button">
+					<span class="nav-toggle__line nav-toggle__line--top"></span>
+					<span class="nav-toggle__line nav-toggle__line--middle"></span>
+					<span class="nav-toggle__line nav-toggle__line--bottom"></span>
+					<span class="sr-only">{{navToggle}}</span>
+				</button>
+			</div>
 		</div>
 	</div>
 </header>
