--- a/html/src/scss/config/_variables.scss
+++ b/html/src/scss/config/_variables.scss
@@ -11,13 +11,17 @@ $grey: #333;
 $blue: #278ed0;
 $mint: #28d2c6;
 
-
 $site-colors: (
 	'black': $black,
 	'white': $white,
 	'blue': $blue,
 	'mint': $mint
 ) !default;
+
+$duration: 0.3s;
+$duration-fast: 0.15s;
+$duration-slow: 0.6s;
+$ease: ease-in-out;
 
 //----------  Media queries breakpoints - Grid breakpoint
 //------------------------------------------------------------------------------
