--- a/html/src/scss/modules/_header.scss
+++ b/html/src/scss/modules/_header.scss
@@ -1,7 +1,7 @@
 //----------  header
 //------------------------------------------------------------------------------
 .header {
-	padding: 10px 0;
+	padding-top: 56px;
 }
 .header__container {
 	display: flex;
@@ -9,23 +9,59 @@
 	align-items: center;
 }
 .header__logo {
-	width: 50px;
+	width: 290px;
+}
+.nav {
+	vertical-align: middle;
+	display: inline-block;
 }
 .nav__list {
 	display: flex;
-	justify-content: flex-end;
 }
 .nav__item {
-	border-left: 1px solid $black;
-	&:first-child {
-		border-left: 0;
-	}
+	margin: 0 10px;
 }
 .nav__link {
+	font-size: 16px;
+	font-weight: 400;
+	color: $grey;
+	line-height: 20px;
 	padding: 0 10px;
-	color: $black;
 	display: block;
-	@include hover {
-		text-decoration: underline;
+	&::after {
+		content: '';
+		position: absolute;
+		bottom: -10px;
+		left: 0;
+		width: 100%;
+		height: 6px;
+		border-radius: 3px;
+		background-color: $mint;
+		transform: scaleX(0);
+		.loaded & {
+			transition: $duration $ease;
+		}
 	}
+	@include hover {
+		&::after {
+			transform: scaleX(0.7);
+		}
+	}
+}
+.nav__link--active {
+	&::before {
+		content: '';
+		position: absolute;
+		bottom: -10px;
+		left: 50%;
+		width: 6px;
+		height: 6px;
+		margin-left: -3px;
+		border-radius: 50%;
+		background-color: $mint;
+	}
+}
+.header__join-btn {
+	vertical-align: middle;
+	display: inline-block;
 }
