--- a/html/src/scss/layout/_buttons.scss
+++ b/html/src/scss/layout/_buttons.scss
@@ -17,16 +17,26 @@ input[type='submit'] {
 }
 
 .btn {
-	background-color: $black;
+	background-color: $blue;
 	color: $white;
 	display: inline-block;
-	font-size: 14px;
-	font-weight: bold;
-	height: 40px;
-	line-height: 40px;
-	padding: 0 20px;
+	font-size: 16px;
+	line-height: 20px;
+	padding: 0 30px;
 	transition: 0.4s ease-out;
 	@include hover {
 		background-color: lighten($black, 30%);
 	}
+}
+
+.btn--mint {
+	background-color: $mint;
+}
+
+.btn--wide {
+	min-width: 270px;
+}
+
+.btn--medium {
+	min-width: 206px;
 }
