--- a/html/src/scss/layout/_buttons.scss
+++ b/html/src/scss/layout/_buttons.scss
@@ -18,25 +18,29 @@ input[type='submit'] {
 
 .btn {
 	background-color: $blue;
-	color: $white;
-	display: inline-block;
 	font-size: 16px;
+	font-weight: 400;
+	color: $white;
 	line-height: 20px;
-	padding: 0 30px;
-	transition: 0.4s ease-out;
+	padding: 14px 30px;
+	min-width: 206px;
+	border-radius: 24px;
+	text-align: center;
+	transition: $duration $ease;
+	display: inline-block;
 	@include hover {
-		background-color: lighten($black, 30%);
+		box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16);
 	}
 }
 
-.btn--mint {
-	background-color: $mint;
+.btn--small {
+	min-width: 156px;
 }
 
 .btn--wide {
 	min-width: 270px;
 }
 
-.btn--medium {
-	min-width: 206px;
+.btn--mint {
+	background-color: $mint;
 }
