--- a/html/src/scss/modules/_header.scss
+++ b/html/src/scss/modules/_header.scss
@@ -17,16 +17,17 @@
 }
 .nav__list {
 	display: flex;
+	padding-right: 12px;
 }
 .nav__item {
 	margin: 0 10px;
 }
 .nav__link {
+	position: relative;
 	font-size: 16px;
-	font-weight: 400;
+	font-weight: 700;
 	color: $grey;
 	line-height: 20px;
-	padding: 0 10px;
 	display: block;
 	&::after {
 		content: '';
@@ -35,7 +36,7 @@
 		left: 0;
 		width: 100%;
 		height: 6px;
-		border-radius: 3px;
+		border-radius: 6px;
 		background-color: $mint;
 		transform: scaleX(0);
 		.loaded & {
@@ -63,5 +64,7 @@
 }
 .header__join-btn {
 	vertical-align: middle;
-	display: inline-block;
+}
+.nav-toggle {
+	display: none;
 }
