join us module wip

--- a/html/src/html/modules/join-module/join-module.hbs
+++ b/html/src/html/modules/join-module/join-module.hbs
@@ -1,3 +1,16 @@
-<div class="join-module">
-
+<div class="join-module has-cover ">
+	<div class="wrap wrap--small">
+		<h1 class="join__module-title">{{title}}</h1>
+		<p class="join__module-info">{{text}}</p>
+		<div class="join-module__links">
+			<a class="btn join-module__link" href="javascript">{{btnTextFirst}}</a>
+			<a class="btn join-module__link" href="javascript">{{btnTextSecond}}</a>
+		</div>
+		<div class="join-module__images">
+			<div class="join-module__image join-module__image--top"><img src="{{imageTop}}" alt=""></div>
+			<div class="join-module__image join-module__image--right"><img src="{{imageRight}}" alt=""></div>
+			<div class="join-module__image join-module__image--bottom"><img src="{{imageBottom}}" alt=""></div>
+			<div class="join-module__image join-module__image--left"><img src="{{imageLeft}}" alt=""></div>
+		</div>
+	</div>
 </div>
