--- a/html/src/scss/modules/_join-module.scss
+++ b/html/src/scss/modules/_join-module.scss
@@ -1,3 +1,6 @@
 //---------- join-module
 //------------------------------------------------------------------------------
 
+.join-module {
+	background-image: url('assets/img/shapes/joinus-shape.svg');
+}
