--- a/html/src/scss/modules/_header.scss
+++ b/html/src/scss/modules/_header.scss
@@ -2,6 +2,7 @@
 //------------------------------------------------------------------------------
 .header {
 	padding-top: 56px;
+	padding-bottom: 20px;
 }
 .header__container {
 	display: flex;
