home intro module finished

--- a/html/src/html/modules/home-intro/home-intro.hbs
+++ b/html/src/html/modules/home-intro/home-intro.hbs
@@ -2,5 +2,11 @@
 	<div class="wrap home-intro__wrap">
 		<p class="home-intro__text">{{introText}}</p>
 		<a class="btn" href="javascript:;">{{readMore}}</a>
+		<div class="home-intro__image">
+			<img src="{{introImg}}" alt="">
+			<span class="home-intro__circle home-intro__circle--blue"></span>
+			<span class="home-intro__circle home-intro__circle--mint"></span>
+			<span class="home-intro__circle home-intro__circle--grey"></span>
+		</div>
 	</div>
 </div>
