--- a/html/src/scss/modules/_home-intro.scss
+++ b/html/src/scss/modules/_home-intro.scss
@@ -3,12 +3,22 @@
 
 .home-intro {
 	padding-top: 208px;
+	margin-bottom: 350px;
 }
 .home-intro__wrap {
 	max-width: 1470px;
+	position: relative;
 }
 .home-intro__text {
+	max-width: 800px;
 	font-size: 40px;
 	font-weight: 700;
 	line-height: 55px;
+	margin-bottom: 34px;
+}
+.home-intro__image {
+	position: absolute;
+	width: 1444px;
+	top: -680px;
+	left: 55.6%;
 }
