created empty modules

--- a/html/src/scss/style.scss
+++ b/html/src/scss/style.scss
@@ -50,3 +50,24 @@
 @import 'modules/slider';
 @import 'modules/join-module';
 @import 'modules/home-intro';
+
+@import 'modules/featured-project';
+@import 'modules/project';
+@import 'modules/news-slider';
+@import 'modules/support';
+@import 'modules/links-list';
+@import 'modules/about-us';
+@import 'modules/page-intro';
+@import 'modules/image-text';
+@import 'modules/testimonials';
+@import 'modules/text-block';
+@import 'modules/simple-form';
+@import 'modules/gallery';
+@import 'modules/alumni';
+@import 'modules/donations';
+@import 'modules/faq';
+@import 'modules/featured-news';
+@import 'modules/news-list';
+@import 'modules/articles';
+@import 'modules/news-details';
+@import 'modules/comments';
