--- a/html/src/html/modules/project/project.hbs
+++ b/html/src/html/modules/project/project.hbs
@@ -1,3 +1,33 @@
 <div class="project">
-	<h2>{{title}} - project</h2>
+	<div class="wrap">
+		<div class="project__item project__image--normal">
+			<div class="project__text">
+				<h2 class="h2 project__title">{{title}}</h2>
+				<p class="project__text">{{text}}</p>
+				<a class="btn" href="javascript:;">{{link}}</a>
+			</div>
+			<div class="project__image project__image--normal">
+				{{#if additionalImage}}
+				<img class="project__additional-image" src="{{additionalImage}}" alt="">
+				{{/if}}
+				<img src="{{image}}" alt="">
+			</div>
+		</div>
+		<div class="project__item project__image--reverse">
+			<div class="project__text">
+				<h2 class="h2 project__title">{{titleReverse}}</h2>
+				<p class="project__text">{{textReverse}}</p>
+				<a class="btn" href="javascript:;">{{linkReverse}}</a>
+			</div>
+			<div class="project__image project__image--reverse">
+				{{#if additionalImageReverse}}
+				<img class="project__additional-image" src="{{additionalImageReverse}}" alt="">
+				{{/if}}
+				<img src="{{imageReverse}}" alt="">
+			</div>
+		</div>
+		<span class="circle circle--blue"></span>
+	</div>
 </div>
+
+{{!-- Aktuelni projekti ns klub, lice ulice --}}
