--- a/html/src/html/modules/support/support.hbs
+++ b/html/src/html/modules/support/support.hbs
@@ -9,6 +9,7 @@
 						<a class="btn{{#if mintBtn}} btn--mint{{/if}}" href="javascript:;">{{this.link}}</a>
 					</div>
 				{{/each}}
+				<div class="circle circle--grey circle--small"></div>
 			</div>
 		{{/if}}
 	</div>
