finished about us module html

--- a/html/src/html/modules/about-us/about-us.hbs
+++ b/html/src/html/modules/about-us/about-us.hbs
@@ -1,5 +1,20 @@
 <div class="about-us">
-	<h2>{{title}} - about-us</h2>
+	<div class="wrap wrap--small">
+		<div class="about-us__content">
+			<h6 class="h6 about-us__tag">{{tag}}</h6>
+			<h2 class="h2 about-us__title">{{title}}</h2>
+			<p class="about-us__text">{{text}}</p>
+			<a class="btn" href="javascript:;">{{link}}</a>
+		</div>
+	</div>
+	<div class="about-us__images">
+		<div class="about-us__image">
+			<img src="{{image}}" alt="">
+		</div>
+		<div class="about-us__shape">
+			<img src="{{shape}}" alt="">
+		</div>
+	</div>
 </div>
 
 {{!-- O nama homepage --}}
