--- a/html/src/html/modules/image-text/image-text.hbs
+++ b/html/src/html/modules/image-text/image-text.hbs
@@ -1,5 +1,14 @@
 <div class="image-text">
-	<h2>{{title}} - image-text</h2>
+	<div class="wrap wrap--medium">
+		<div class="image-text__image">
+			<img src="{{image}}" alt="">
+		</div>
+		<div class="image-text__content">
+			<h2 class="h2 image-text__title">{{title}}</h2>
+			<p class="image-text__text">{{text}}</p>
+			<a class="btn" href="javascript:;">{{link}}</a>
+		</div>
+	</div>
 </div>
 
 {{!-- Mediji o nama, kako podrzati prodavce --}}
