reworked html for images

--- a/html/src/html/modules/about-us/about-us.hbs
+++ b/html/src/html/modules/about-us/about-us.hbs
@@ -9,7 +9,7 @@
 	</div>
 	<div class="about-us__images">
 		<div class="about-us__image">
-			<img src="{{image}}" alt="">
+			<div class="about-us__img has-cover" style="background-image: url('{{image}}');"><div>
 		</div>
 		<div class="about-us__shape">
 			<img src="{{shape}}" alt="">
