added few shape masks

--- a/html/src/html/modules/news-slider/news-slider.hbs
+++ b/html/src/html/modules/news-slider/news-slider.hbs
@@ -3,7 +3,7 @@
 		<h2 class="h2 news-slider__title">{{title}}</h2>
 		{{#if sliderItems}}
 		<div class="news-slider__container">
-			<div class="news-slider__slider{{#if isSlider}} js-news-slider{{/if}}">
+			<div class="news-slider__slider js-news-slider">
 				{{#each sliderItems}}
 				<div class="news-slider__item">
 					<div class="news-slider__image has-cover" style="background-image: url('{{this.image}}');"></div>
