--- a/html/src/scss/base/_layout.scss
+++ b/html/src/scss/base/_layout.scss
@@ -39,3 +39,29 @@ body {
 .wrap--small {
 	max-width: 964px;
 }
+
+// Circles
+.circle {
+	position: absolute;
+	width: 49px;
+	height: 49px;
+	border-radius: 50%;
+	z-index: 100;
+	display: block;
+}
+.circle--blue {
+	background-color: $blue;
+	box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
+}
+.circle--mint {
+	background-color: $mint;
+	box-shadow: 0 10px 16px rgba(40, 210, 198, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
+}
+.circle--grey {
+	background-color: $grey-light;
+	box-shadow: 0 10px 16px rgba(196, 196, 196, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
+}
+.circle--small {
+	width: 42px;
+	height: 42px;
+}
