--- a/Patrija.Web/Views/Partials/Layout/_Footer.cshtml
+++ b/Patrija.Web/Views/Partials/Layout/_Footer.cshtml
@@ -1,1 +1,29 @@
-﻿
+﻿@inherits UmbracoViewPage<Patrija.Core.ViewModels.Partials.Layout.FooterViewModel>
+
+<footer class="footer has-cover">
+    <div class="wrap wrap--normal">
+        <div class="footer__container">
+            <div class="footer__logo">
+                <img class="footer__logo-image" src="@Model.Logo.Url" alt="logo">
+                <span class="footer__logo-text">@Model.LogoText</span>
+            </div>
+            @if (Model.Links.Any())
+            {
+                <div class="footer__links">
+                    <ul class="footer__links-list">
+                        @foreach (var link in Model.Links)
+                        {
+                            <li class="footer__links-item">
+                                <a class="footer__links-link" href="@link.Url">@link.Content</a>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            }
+            
+        </div>
+        <div class="footer__copyright">
+            <span class="footer__copyright-text">@Model.CopyrightText</span>
+        </div>
+    </div>
+</footer>
