--- a/html/src/scss/modules/_featured-project.scss
+++ b/html/src/scss/modules/_featured-project.scss
@@ -6,7 +6,7 @@
 }
 
 .featured-project__item--normal {
-	padding: 154px 80px 300px 33.8%;
+	padding: 154px 80px 278px 33.8%;
 }
 
 .featured-project__item--reverse {
@@ -30,6 +30,7 @@
 	font-size: 18px;
 	line-height: 30px;
 	margin-bottom: 22px;
+	max-width: 712px;
 }
 
 .featured-project__mask {
