added circle to featured project

--- a/html/src/html/modules/featured-project/featured-project.hbs
+++ b/html/src/html/modules/featured-project/featured-project.hbs
@@ -28,7 +28,7 @@
 				<div class="featured-project__image" style="background-image: url('{{imageReverse}}');"></div>
 			</div>
 		</div>
-		<span class="circle circle--mint"></span>
+		<span class="circle circle--mint circle--big"></span>
 	</div>
 </div>
 
