--- a/html/src/scss/modules/_support.scss
+++ b/html/src/scss/modules/_support.scss
@@ -2,5 +2,40 @@
 //------------------------------------------------------------------------------
 
 .support {
-	color: $black;
+	padding: 212px 0;
+}
+
+.support__container {
+	padding: 0 7%;
+	display: flex;
+	justify-content: space-between;
+	position: relative;
+}
+
+.support__item {
+	flex: 0 0 49%;
+	max-width: 49%;
+	text-align: center;
+	box-shadow: 4px 4px 50px rgba($black, 0.1);
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+}
+
+.support__item-content {
+	background-color: $white;
+	padding: 72px;
+}
+
+.support__item-title {
+	margin-bottom: 10px;
+}
+
+.support__item-text {
+	margin-bottom: 26px;
+}
+
+.circle {
+	top: 150px;
+    right: -1.5%;
 }
