--- a/html/src/scss/base/_typography.scss
+++ b/html/src/scss/base/_typography.scss
@@ -5,6 +5,12 @@
 .h1, .h2, .h3, .h4, .h5, .h6 {
 	font-family: $font-default;
 	font-weight: 700;
+	a {
+		color: inherit;
+		@include hover {
+			text-decoration: underline;
+		}
+	}
 }
 
 .rte h1, .h1 {
