--- a/html/src/scss/modules/_home-intro.scss
+++ b/html/src/scss/modules/_home-intro.scss
@@ -3,7 +3,7 @@
 
 .home-intro {
 	padding-top: 208px;
-	margin-bottom: 350px;
+	margin-bottom: 480px;
 }
 .home-intro__wrap {
 	max-width: 1470px;
@@ -21,4 +21,34 @@
 	width: 75.21vw;
 	top: -680px;
 	left: 55.6%;
+}
+.home-intro__circle {
+	position: absolute;
+	border-radius: 50%;
+	z-index: 100;
+	display: block;
+}
+.home-intro__circle--blue {
+	background-color: $blue;
+	width: 61px;
+	height: 61px;
+	top: 36.8%;
+	left: 17.1%;
+	box-shadow: 0 10px 16px rgba(39, 142, 208, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
+}
+.home-intro__circle--mint {
+	background-color: $mint;
+	width: 49px;
+	height: 49px;
+	top: 74.2%;
+	left: 13.7%;
+	box-shadow: 0 10px 16px rgba(40, 210, 198, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
+}
+.home-intro__circle--grey {
+	background-color: $grey-light;
+	width: 42px;
+	height: 42px;
+	top: 77.7%;
+	left: 48.4%;
+	box-shadow: 0 10px 16px rgba(196, 196, 196, 0.16), 0 4px 6px rgba(0, 0, 0, 0.06);
 }
