--- a/html/src/scss/modules/_news-slider.scss
+++ b/html/src/scss/modules/_news-slider.scss
@@ -2,5 +2,61 @@
 //------------------------------------------------------------------------------
 
 .news-slider {
-	color: $black;
+	margin-bottom: 198px;
+}
+.news-slider__title {
+	text-align: center;
+	margin-bottom: 45px;
+}
+.news-slider__container {
+	padding: 0 94px;
+}
+.news-slider__slider {
+	font-size: 0;
+	margin: 0 -15px;
+}
+.news-slider__item {
+	width: 33.333%;
+	padding: 0 15px;
+	vertical-align: top;
+	display: inline-block;
+}
+.news-slider__image {
+	width: 100%;
+	position: relative;
+	padding-bottom: 66%;
+	border-radius: 15px;
+	margin-bottom: 22px;
+}
+.news-slider__meta {
+	position: relative;
+	width: 100%;
+	height: 30px;
+	margin-bottom: 12px;
+}
+.news-slider__category {
+	background-color: $blue;
+	font-size: 14px;
+	font-weight: 400;
+	color: $white;
+	line-height: 18px;
+	padding: 6px 20px;
+	border-radius: 15px;
+	display: inline-block;
+}
+.news-slider__item-title {
+	margin-bottom: 5px;
+}
+.news-slider__date {
+	position: absolute;
+	top: 0;
+	right: 0;
+	font-size: 14px;
+	font-weight: 300;
+	color: $grey;
+	line-height: 30px;
+}
+.news-slider__text {
+	font-size: 14px;
+	line-height: 25px;
 }
