--- a/html/src/html/modules/links-list/links-list.hbs
+++ b/html/src/html/modules/links-list/links-list.hbs
@@ -1,8 +1,8 @@
 <div class="links-list">
 	<div class="wrap wrap--small">
-		<h3 class="h3 links-list__tutle">{{title}}</h3>
+		<h3 class="h3 links-list__title">{{title}}</h3>
 		{{#if linksList}}
-			<ul class="linksList">
+			<ul class="links-list__list">
 				{{#each linksList}}
 					<li class="links-list__item">
 						<a class="btn links-list__link" href="javascript:;">{{this.link}}</a>
