--- a/html/src/scss/modules/_links-list.scss
+++ b/html/src/scss/modules/_links-list.scss
@@ -2,5 +2,32 @@
 //------------------------------------------------------------------------------
 
 .links-list {
-	color: $black;
+	text-align: center;
+	padding: 42px 0 98px;
+}
+
+.links-list__list {
+	display: flex;
+	flex-wrap: wrap;
+	margin: 0 -10px;
+}
+
+.links-list__item {
+	flex: 0 0 50%;
+	max-width: 50%;
+	padding: 0 10px;
+}
+
+.links-list__link {
+	display: block;
+	font-size: 20px;
+	line-height: 30px;
+    font-weight: 700;
+    padding: 34px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+.links-list__title {
+	margin-bottom: 35px;
 }
