--- a/html/src/html/modules/support/support.hbs
+++ b/html/src/html/modules/support/support.hbs
@@ -1,5 +1,5 @@
 <div class="support">
-	<div class="wrap">
+	<div class="wrap support__wrap">
 		{{#if supportItem}}
 			<div class="support__container">
 				{{#each supportItem}}
@@ -14,6 +14,9 @@
 				<div class="circle circle--grey circle--small"></div>
 			</div>
 		{{/if}}
+		<div class="support__image-mask">
+			<div class="support__image has-cover" style="background-image: url('{{image}}');"></div>
+		</div>
 	</div>
 </div>
 
