--- a/Patrija.Web/Views/Home.cshtml
+++ b/Patrija.Web/Views/Home.cshtml
@@ -1,3 +1,7 @@
 ﻿@inherits UmbracoViewPage<HomeViewModel>
 
 <p>Homepage</p>
+
+@{
+    Html.RenderAction<NestedContentController>(c => nameof(c.HomeIntro), new { viewModel = Model.HomeIntro});
+}
