--- a/html/src/html/modules/about-us/about-us.hbs
+++ b/html/src/html/modules/about-us/about-us.hbs
@@ -5,14 +5,14 @@
 			<h2 class="h2 about-us__title">{{title}}</h2>
 			<p class="about-us__text">{{text}}</p>
 			<a class="btn" href="javascript:;">{{link}}</a>
-		</div>
-	</div>
-	<div class="about-us__images">
-		<div class="about-us__image">
-			<div class="about-us__img has-cover" style="background-image: url('{{image}}');"><div>
-		</div>
-		<div class="about-us__shape">
-			<img src="{{shape}}" alt="">
+			<div class="about-us__images">
+				<div class="about-us__image">
+					<div class="about-us__img has-cover" style="background-image: url('{{image}}');"></div>
+				</div>
+				<div class="about-us__shape">
+					<img src="{{shape}}" alt="">
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
