--- a/html/src/html/modules/featured-project/featured-project.hbs
+++ b/html/src/html/modules/featured-project/featured-project.hbs
@@ -11,7 +11,7 @@
 				{{#if additionalImage}}
 				<img class="featured-project__additional-image" src="{{additionalImage}}" alt="">
 				{{/if}}
-				<div class="featured-project__image" style="background-image: url('{{image}}');"></div>
+				<div class="featured-project__image has-cover" style="background-image: url('{{image}}');"></div>
 			</div>
 		</div>
 		<div class="featured-project__item featured-project__item--reverse">
@@ -25,7 +25,7 @@
 				{{#if additionalImageReverse}}
 				<img class="featured-project__additional-image" src="{{additionalImageReverse}}" alt="">
 				{{/if}}
-				<div class="featured-project__image" style="background-image: url('{{imageReverse}}');"></div>
+				<div class="featured-project__image has-cover" style="background-image: url('{{imageReverse}}');"></div>
 			</div>
 		</div>
 		<span class="circle circle--mint circle--big"></span>
