--- a/html/src/scss/modules/_about-us.scss
+++ b/html/src/scss/modules/_about-us.scss
@@ -2,5 +2,61 @@
 //------------------------------------------------------------------------------
 
 .about-us {
-	color: $black;
+	padding: 74px 0 250px;
+}
+
+.about-us__content {
+	padding: 65px 80px 65px 20.2%;
+	position: relative;
+}
+
+.about-us__tag {
+	text-transform: uppercase;
+	margin-bottom: 4px;
+}
+
+.about-us__title {
+	margin-bottom: 18px;
+}
+
+.about-us__text {
+	max-width: 712px;
+	margin-bottom: 22px;
+}
+
+.about-us__image {
+	position: absolute;
+	top: 0;
+	right: 94.6%;
+	width: 39.1vw;
+	padding-bottom: 67.1%;
+	&::after {
+		background-image: url('../assets/images/mask/about-us-mask.svg');
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		background-position: center center;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		content: '';
+		display: block;
+	}
+}
+
+.about-us__img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 99.9%;
+	height: 100%;
+}
+
+.about-us__shape {
+	position: absolute;
+	top: -86px;
+	right: -86.5%;
+	width: 535px;
+	height: 588px;
 }
