--- a/html/src/html/modules/featured-project/featured-project.hbs
+++ b/html/src/html/modules/featured-project/featured-project.hbs
@@ -28,7 +28,7 @@
 				<div class="featured-project__image has-cover" style="background-image: url('{{imageReverse}}');"></div>
 			</div>
 		</div>
-		<span class="circle circle--mint circle--big"></span>
+		<span class="circle circle--mint circle--big featured-project__circle"></span>
 	</div>
 </div>
 
