--- a/html/src/html/modules/links-list/links-list.hbs
+++ b/html/src/html/modules/links-list/links-list.hbs
@@ -9,8 +9,8 @@
 					</li>
 				{{/each}}
 			</ul>
-			<div class="circle circle--mint"></div>
-			<div class="circle circle--blue"></div>
+			<div class="circle circle--mint links-list__circle links-list__circle--left"></div>
+			<div class="circle circle--blue links-list__circle links-list__circle--right"></div>
 		{{/if}}
 	</div>
 </div>
