--- a/html/src/html/modules/project/project.hbs
+++ b/html/src/html/modules/project/project.hbs
@@ -26,7 +26,7 @@
 				<div class="project__img has-cover" style="background-image: url('{{imageReverse}}');"><div>
 			</div>
 		</div>
-		<span class="circle circle--blue"></span>
+		{{!-- <span class="circle circle--blue"></span> --}}
 	</div>
 </div>
 
