--- a/html/src/html/modules/support/support.hbs
+++ b/html/src/html/modules/support/support.hbs
@@ -11,7 +11,7 @@
 						</div>
 					</div>
 				{{/each}}
-				<div class="circle circle--grey circle--small"></div>
+				<div class="circle circle--grey circle--small support__circle"></div>
 			</div>
 		{{/if}}
 		<div class="support__image-mask">
