--- a/html/src/scss/modules/_join-module.scss
+++ b/html/src/scss/modules/_join-module.scss
@@ -2,8 +2,10 @@
 //------------------------------------------------------------------------------
 
 .join-module {
-	background-image: url('assets/images/shapes/joinus-shape.svg');
+	background-image: url('../assets/images/shapes/joinus-shape.svg');
 	text-align: center;
+	background-size: 100% auto;
+	padding-top: 135px;
 }
 
 .join-module__container {
