finished page intro module

--- a/html/src/html/modules/project/project.hbs
+++ b/html/src/html/modules/project/project.hbs
@@ -1,5 +1,6 @@
 <div class="project">
 	<div class="wrap">
+		<h2 class="h2 project__main-title">{{mainTitle}}</h2>
 		<div class="project__item project__item--normal">
 			<div class="project__item-content">
 				<h2 class="h2 project__title">{{title}}</h2>
