--- a/html/src/html/templates/index/template.hbs
+++ b/html/src/html/templates/index/template.hbs
@@ -5,11 +5,14 @@
 
 		<main class="main">
 			{{!-- THIS IS FOR INDEX DEMO PAGES ONLY --}}
-			<div class="wrap" style="padding: 60px 30px 40px; font-size: 16px; font-weight: 500; max-width: 600px;">
+			<div class="wrap" style="padding: 60px 30px 40px; font-size: 18px; font-weight: 500; max-width: 600px;">
 				<div class="rte">
 					<ol>
 						<li style="margin-bottom: 5px;">
 							<a style="color: #151515;" href="homepage.html">Homepage</a>
+						</li>
+						<li style="margin-bottom: 5px;">
+							<a style="color: #151515;" href="ko-smo-mi.html">Ko smo mi?</a>
 						</li>
 					</ol>
 				</div>
