--- a/html/src/html/modules/page-intro/page-intro.hbs
+++ b/html/src/html/modules/page-intro/page-intro.hbs
@@ -1,13 +1,15 @@
 <div class="page-intro">
 	<div class="wrap wrap--medium">
 		<div class="page-intro__container">
-			<div class="page-intro__text">
-				<h1 class="h2 page-intro__title">{{title}}</h1>
-				<p class="page-intro__text">{{text}}</p>
+			<div class="page-intro__content">
+				<div class="page-intro__content-align">
+					<h1 class="h2 page-intro__title">{{title}}</h1>
+					<p class="page-intro__text">{{text}}</p>
+				</div>
 			</div>
 			{{!-- additionalImgClass can be: page-intro__image--secondary, page-intro__image--tertiary, page-intro__image--quaternary --}}
 			<div class="page-intro__image{{#if additionalImgClass}} {{additionalImgClass}}{{/if}}">
-				<div class="page-intro__img has-cover" style="background-image: url('{{image}}');"><div>
+				<div class="page-intro__img has-cover" style="background-image: url('{{image}}');"></div>
 				<span class="circle circle--blue circle--large"></span>
 				<span class="circle circle--mint"></span>
 			</div>
