--- a/html/src/scss/modules/_image-text.scss
+++ b/html/src/scss/modules/_image-text.scss
@@ -2,5 +2,55 @@
 //------------------------------------------------------------------------------
 
 .image-text {
-	color: $black;
+	padding: 42px 0;
+}
+
+.image-text__container {
+	padding: 0 52px;
+	display: flex;
+}
+
+.image-text__image {
+	display: inline-block;
+	position: relative;
+	width: 46.2vh;
+	padding-bottom: 28.9%;
+	margin-right: 12.5vh;
+	&::after {
+		background-image: url('../assets/images/mask/image-text-left.svg');
+		background-size: 100% 100%;
+		background-position: center center;
+		background-repeat: no-repeat;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		content: '';
+		display: block;
+	}
+}
+
+.image-text__img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 99.9%;
+	height: 100%;
+}
+
+.image-text__content {
+	max-width: 694px;
+	display: inline-block;
+	padding: 18px 0;
+}
+
+.image-text__title {
+	margin-bottom: 28px;
+}
+
+.image-text__text {
+	font-size: 18px;
+	line-height: 30px;
+	margin-bottom: 32px;
 }
