--- a/Patrija.Web/Views/Home.cshtml
+++ b/Patrija.Web/Views/Home.cshtml
@@ -2,4 +2,10 @@
 
 @{
     Html.RenderAction<NestedContentController>(c => nameof(c.HomeIntro), new { viewModel = Model.HomeIntro});
+
+    for (var i=0; i < Model.Features.Length; i++)
+    {
+        var featuredContent = Model.Features[i];
+        Html.RenderAction<NestedContentController>(c => nameof(c.TaggedFeature), new { viewModel = featuredContent});
+    }
 }
