added finished projects modules to page

--- a/html/src/html/templates/ko-smo-mi/template.hbs
+++ b/html/src/html/templates/ko-smo-mi/template.hbs
@@ -8,7 +8,13 @@
 
 			{{> project project}}
 
+			{{> news-slider newsSlider}}
+
 			{{> image-text imageText}}
+
+			{{> links-list linksList}}
+
+			{{> join-module joinUs}}
 		</main>
 
 		{{> footer footer}}
