--- a/html/src/scss/modules/_image-text.scss
+++ b/html/src/scss/modules/_image-text.scss
@@ -2,7 +2,8 @@
 //------------------------------------------------------------------------------
 
 .image-text {
-	padding: 42px 0;
+	// padding: 42px 0;
+	padding: 42px 0 228px;
 }
 
 .image-text__container {
@@ -15,7 +16,7 @@
 	display: inline-block;
 	position: relative;
 	width: 46.2vh;
-	padding-bottom: 28.9%;
+	padding-bottom: 28.89%;
 	margin-right: 12.5vh;
 	&::after {
 		background-image: url('../assets/images/mask/image-text-left.svg');
