Added link partial for displaying all links unifromly

--- a/Patrija.Web/Views/Partials/Layout/_Footer.cshtml
+++ b/Patrija.Web/Views/Partials/Layout/_Footer.cshtml
@@ -14,7 +14,7 @@
                         @foreach (var link in Model.Links)
                         {
                             <li class="footer__links-item">
-                                <a class="footer__links-link" href="@link.Url">@link.Content</a>
+				                @Html.Partial("Link", link, new ViewDataDictionary(new { className = "footer__links-link" }))
                             </li>
                         }
                     </ul>
